Fix messages overflowing

--- a/public/style.css
+++ b/public/style.css
@@ -58,14 +58,12 @@ body {
 
 .chat-page {
   display: none;
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 
 /* Font */
-
-.messages {
-  font-size: 150%;
-}
-
 .message-input {
   font-size: 100%;
 }
@@ -80,19 +78,17 @@ body {
 /* Messages */
 
 .chat-area {
+  flex-grow: 1;
   height: 100%;
   padding-bottom: 60px;
 }
 
 .messages {
+  font-size: 200%;
   height: 100%;
   margin: 0;
   overflow-y: scroll;
   padding: 10px 20px 10px 20px;
-}
-
-.message.typing .messageBody {
-  color: gray;
 }
 
 .username {
@@ -106,15 +102,16 @@ body {
 /* Input */
 
 .message-input {
+  flex-shrink: 0;
   border: 10px solid #000;
   bottom: 0;
-  height: 60px;
   left: 0;
-  outline: none;
-  padding-left: 10px;
-  position: absolute;
   right: 0;
   width: 100%;
+  height: 60px;
+  outline: none;
+  padding-left: 10px;
+  position: fixed;
 }
 
 .icon-pigeon {
